# fx-deployments

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
polynomial-mainnet/: cannonfile.toml
polynomial-mainnet/tomls/: core.toml  permissions.toml  permit-all-perps-perpsSystem.toml  permit-deniers.toml  settings.toml
polynomial-mainnet/tomls/collaterals/: susdc.toml  usd0++.toml
polynomial-mainnet/tomls/markets/: perps-factory.toml  spot-factory.toml  strategy-market.toml  yield-market.toml
polynomial-mainnet/tomls/oracles/: perps-keeper-cost.toml  pyth-aave.toml  pyth-aero.toml  pyth-alt.toml  pyth-apt.toml  pyth-avnt.toml  pyth-b3.toml  pyth-bera.toml  pyth-btc.toml  pyth-cookie.toml  pyth-eigen.toml  pyth-ena.toml  pyth-eth.toml  pyth-eur.toml  pyth-floki.toml  pyth-fusdc.toml  pyth-hood.toml  pyth-jpy.toml  pyth-op.toml  pyth-order.toml  pyth-pengu.toml  pyth-pltr.toml  pyth-pnut.toml  pyth-prcl.toml  pyth-rseth.toml  pyth-sol.toml  pyth-solv.toml  pyth-solvbtc.toml  pyth-spy.toml  pyth-sui.toml  pyth-susde.toml  pyth-ton.toml  pyth-tsla.toml  pyth-usdt.toml  pyth-wct.toml  pyth-weeth.toml  (+10 more)
polynomial-sepolia/: cannonfile.toml
polynomial-sepolia/tomls/: permit-all-perps-perpsSystem.toml  settings.toml
scripts/: __init__.py  add_new_market.py  calculate_new_market_values.py  calculate_skew_scale.py  constants.toml  generate_toml_new_market.py  get_current_markets_data.py  get_current_tvl.py  get_depth.py  get_new_market_id.py  read_constants.py  recalculate_max_market.py  replace_market_data.py  rewrite_all.py  rewrite_toml.py  utils.py
(+475 files in other folders)
